--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "expo": "~46.0.9",
+    "expo-cli": "^6.0.5",
+    "expo-constants": "~13.2.4",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
-    "expo-constants": "~13.2.4",
-    "@expo/vector-icons": "^13.0.0",
     "react-native-paper": "4.11.2"
   },
   "devDependencies": {
